# planeswalker_data_service

./: .gitignore  Dockerfile  README.md  app copy.py  app-bak.py  app.py  build.sh  compose.yaml  config.yml  etl.py  example_post_request.py  get_data.py  process_rules_data.py  pyproject.toml  requirements.txt  rules-api.ipynb  test.json  update_log.json
.github/workflows/: main.yml
configs/: config.yaml
etl/: __init__.py  chroma_collection.py  config_loader.py  create_card_db.py  create_rules_db.py  extractor.py  glossary_extractor.py  loader.py  request.py  rules_extractor.py
etl/database/: __init__.py  chroma_db.py  config.py  document.py
etl/extractors/: __init__.py  data_extractor.py  deprecated_wikipedia.py  extractor.py  glossary_extractor.py  rules_extractor.py  rulesguru.py  utils.py
etl/loaders/: document_loader.py
mtg/: hallucination.py  url_parsing.py  util.py  vector_db.py
mtg/chroma/: __init__.py  chroma_db.py  document.py
mtg/etl/: create_card_db.py  create_rules_db.py
mtg/objects/: __init__.py  card.py  document.py
notebooks/: acadmeyruins.json  evaluation_intent_classification.ipynb  rules-api.ipynb
notebooks/scripts/: create_card_db.py
objects/: __init__.py  document.py  rule.py
src/: hallucination.py  logging.py  nli.py  vector_db.py
src/etl/: __init__.py  create_card_db.py  create_rules_db.py  extract.py  extract_card_data.py  extract_rules.py  extract_rulesguru.py  extract_wikipedia.py  ids.txt  load.py  stackexchange.py
tests/: conftest.py  test_card_db.py  test_classify_intent.py  test_rules_db.py
(+20 files in other folders)
