[tool.poetry]
name = "mtg-data-service"
version = "0.1.0"
description = "rest service for mtg data"
authors = ["dataflo <florian.krempl@outlook.com>"]
license = "mit"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
hnswlib = "^0.8.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sentence-transformers = "^2.2.2"
fastapi = "^0.105.0"
matplotlib = "^3.8.2"
wikipedia = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
black = "^23.12.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
