[tool.poetry]
name = "planeswalker-etl-service"
version = "0.1.0"
description = ""
authors = ["Maximilian Pichler <maximilian.pichler@a1.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
requests = "^2.31.0"
chromadb = "^0.5.0"
ipykernel = "^6.29.4"
black = "^24.4.2"
sentence-transformers = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
